Make code compile on 1.18